--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@media (max-device-width: 350px){
+  .navflexBox {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+
+html {
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +20,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   text-align: center;
-  width: 100%;
 }
 
 code {
@@ -19,6 +31,8 @@ header {
   background-color: rgb(120, 120, 221);
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 nav {
@@ -30,6 +44,14 @@ footer {
   color: white;
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+p{
+  word-break:normal;
+  word-wrap:break-word;
+  white-space: pre-wrap;
 }
 
 .TeamAbrLabel {
@@ -60,16 +82,39 @@ button {
   align-items: center;
 }
 
+.navflexBox {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .flex {
   flex: 1;
+  align-items: center;
   min-width: 215px;
-  min-height: 105px;
+  min-height: 180px;
+}
+
+.teamflex {
+  flex: 1;
+  align-items: center;
+}
+
+.member {
+  flex-wrap: wrap;
+}
+
+nav {
+  padding: 10px;
+  align-content: center;
 }
 
 .navFlex {
   flex: 1;
   margin-top: 20px;
   margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .border {
@@ -78,3 +123,4 @@ button {
   margin: 20px;
   border-radius: 30px;
 }
+
