--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,12 @@
   }
 }
 
+@media (min-device-width: 650px){
+  .loginform{
+    max-width: 575px;
+  }
+}
+
 html {
   width: 100%;
 }
@@ -149,6 +155,10 @@ nav {
 .form {
   display: block;
   text-align: center;
+}
+
+.loginform{
+  display: inline-block;
 }
 
 form {
